feat: point to local snapshot of `openmrs-content-referenceapplication-demo`

--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -1,3 +1,4 @@
+# openmrs-distro-referenceapplication\distro\distro.properties
 name=Ref 3.x distro
 version=${project.version}
 war.openmrs=${openmrs.version}
@@ -34,4 +35,4 @@ omod.bedmanagement=${bedmanagement.version}
 omod.stockmanagement=${stockmanagement.version}
 omod.billing=${billing.version}
 content.referenceapplication=${reference-content.version}
-content.referenceapplication-demo=${reference-demo-content.version}
+content.referenceapplication-demo=1.7.0-SNAPSHOT
