--- a/frontend/config-core_demo.json
+++ b/frontend/config-core_demo.json
@@ -744,6 +744,238 @@
       }
     }
   },
+  "@openmrs/esm-billing-app": {
+    "defaultCurrency": "UZS",
+    "Translation overrides": {
+      "en": {
+        "add": "Добавить",
+        "addBill": "Добавить позиции счёта",
+        "addBillableService": "Д Добавлять платную услугу",
+        "addCashPoint": "Добавить кассовую точку",
+        "addNewBillableService": "Добавить новую платную услугу",
+        "addNewCashPoint": "Добавить новую кассовую точку",
+        "addNewPaymentMode": "Добавить новый способ оплаты",
+        "addNewService": "Добавить новую услугу",
+        "addPaymentMethod": "Добавить способ оплаты",
+        "addPaymentMode": "Добавить способ оплаты",
+        "addPaymentOption": "Добавить вариант оплаты",
+        "amount": "Сумма",
+        "amountDue": "Сумма к оплате",
+        "amountMustBePositive": "Сумма должна быть больше 0",
+        "amountRequired": "Сумма обязательна",
+        "amountTendered": "Внесено",
+        "amountToWaiveAriaLabel": "Введите сумму к списанию",
+        "amountToWaiveHelper": "Укажите сумму, которую нужно списать со счёта",
+        "amountToWaiveLabel": "Сумма к списанию",
+        "associatedConcept": "Связанный концепт",
+        "billableService": "Платная услуга",
+        "billableServiceCreated": "Платная услуга создана",
+        "billableServiceCreatedSuccessfully": "Платная услуга успешно создана",
+        "billableServiceForm": "Форма платной услуги",
+        "billableServices": "Платные услуги",
+        "billableServices__lower": "платные услуги",
+        "billableServicesManagement": "Управление платными услугами",
+        "billableServiceUpdated": "Платная услуга обновлена",
+        "billableServiceUpdatedSuccessfully": "Платная услуга успешно обновлена",
+        "billAmount": "Сумма счёта",
+        "billCode": "Код счёта",
+        "billCreatedSuccessfully": "Счёт успешно создан",
+        "billCreationError": "Ошибка создания счёта",
+        "billedItems": "Выставленные позиции",
+        "billedTo": "Выставлено",
+        "billErrorService": "Ошибка биллингового сервиса",
+        "billing": "Выставление счетов",
+        "billingForm": "Форма выставления счёта",
+        "billingHistory": "История счетов",
+        "billingSettings": "Настройки биллинга",
+        "billItem": "Позиция счёта",
+        "billItems": "Позиции счёта",
+        "billLineItemEmpty": "В этом счёте нет позиций",
+        "billList": "Список счетов",
+        "billMetrics": "Метрики счетов",
+        "billName": "{{billName}}",
+        "billPayment": "Оплата счёта",
+        "billPaymentError": "Ошибка оплаты счёта",
+        "billPaymentRequiredMessage": "У пациента есть неоплаченный счёт. Рекомендуйте пациенту оплатить его перед получением услуг",
+        "billProcessedSuccessfully": "Счёт успешно обработан",
+        "billProcessingError": "Ошибка обработки счёта",
+        "billsTable": "Таблица счетов",
+        "billTotal": "Итого по счёту",
+        "billWaiver": "Списание со счёта",
+        "billWaiverError": "Списание не удалось {{error}}",
+        "billWaiverSuccess": "Списание выполнено успешно",
+        "birthDate": "Дата рождения",
+        "cashPointConfig": "Настройка кассовых точек",
+        "cashPointHistory": "История кассовой точки",
+        "cashPointLocation": "Расположение кассовой точки",
+        "cashPointName": "Название кассовой точки",
+        "cashPointNamePlaceholder": "Например, Касса аптеки",
+        "cashPointNameRequired": "Название кассовой точки обязательно",
+        "cashPointSaved": "Кассовая точка успешно сохранена.",
+        "cashPointUuid": "UUID кассовой точки",
+        "cashPointUuidPlaceholder": "Введите UUID",
+        "checkFilters": "Проверьте фильтры выше",
+        "confirmDeleteMessage": "Вы уверены, что хотите удалить этот способ оплаты? Действуйте осторожно.",
+        "cumulativeBills": "Накопленные счета",
+        "currentPrice": "Текущая цена",
+        "date": "Дата",
+        "dateAndTime": "Дата и время",
+        "dateOfPayment": "Дата оплаты",
+        "deletePaymentMode": "Удалить способ оплаты",
+        "deleting": "Удаление",
+        "description": "Описание",
+        "descriptionPlaceholder": "Например, используется для всех наличных операций",
+        "discard": "Отменить",
+        "discount": "Скидка",
+        "discountAmount": "Сумма скидки",
+        "editBillableService": "Редактировать платную услугу",
+        "editBillLineItem": "Редактировать позицию счёта",
+        "editPaymentMode": "Редактировать способ оплаты",
+        "editThisBillItem": "Редактировать эту позицию счёта",
+        "enterAmount": "Введите сумму",
+        "enterReferenceNumber": "Введите референсный номер",
+        "enterSellingPrice": "Введите продажную цену",
+        "enterServiceName": "Введите название услуги",
+        "enterServiceShortName": "Введите краткое название услуги",
+        "errorCreatingBill": "Произошла ошибка при создании счёта",
+        "errorDeletingPaymentMode": "Произошла ошибка при удалении способа оплаты.",
+        "errorFetchingCashPoints": "Произошла ошибка при загрузке кассовых точек.",
+        "errorFetchingLocations": "Произошла ошибка при загрузке местоположений.",
+        "errorLoadingBillableServices": "Ошибка загрузки платных услуг",
+        "errorLoadingBillServices": "Ошибка загрузки биллинговых услуг",
+        "errorLoadingPaymentModes": "Ошибка загрузки способов оплаты",
+        "errorPrintingInvoice": "Ошибка печати счёта-фактуры",
+        "errorProcessingPayment": "Ошибка обработки платежа",
+        "errorSavingCashPoint": "Произошла ошибка при сохранении кассовой точки.",
+        "errorSavingPaymentMode": "Произошла ошибка при сохранении способа оплаты.",
+        "filterBy": "Фильтр:",
+        "filterTable": "Фильтровать таблицу",
+        "gender": "Пол",
+        "grandTotal": "Общая сумма",
+        "home": "Главная",
+        "identifier": "Идентификатор",
+        "insuranceScheme": "Страховая программа",
+        "invalidUuidFormat": "Неверный формат UUID",
+        "invalidWaiverAmount": "Недопустимая сумма списания",
+        "inventoryItem": "Позиция складского учёта",
+        "invoice": "Счёт-фактура",
+        "invoiceDate": "Дата счёта-фактуры",
+        "invoiceError": "Ошибка счёта-фактуры",
+        "invoiceLineItems": "Позиции счёта-фактуры",
+        "invoiceNumber": "Счёт №",
+        "invoiceStatus": "Статус счёта-фактуры",
+        "item": "Позиция",
+        "itemsToBeBilled": "Позиции к выставлению",
+        "launchBillForm": "Открыть форму выставления счёта",
+        "lineItems": "Позиции счёта",
+        "lineItemUpdated": "Позиция обновлена",
+        "lineItemUpdateErrorDefault": "Не удалось обновить позицию счёта. Попробуйте ещё раз.",
+        "lineItemUpdateFailed": "Не удалось обновить позицию",
+        "lineItemUpdateSuccess": "Позиция счёта успешно обновлена",
+        "loading": "Загрузка данных",
+        "loadingBillInfo": "Загрузка информации о счёте",
+        "loadingBillingServices": "Загрузка биллинговых услуг",
+        "loadingBillItems": "Загрузка позиций счёта",
+        "loadingBillMetrics": "Загрузка метрик счетов",
+        "loadingDescription": "Загрузка",
+        "location": "Местоположение",
+        "locationRequired": "Местоположение обязательно",
+        "manageBillableServices": "Управление платными услугами",
+        "name": "Название",
+        "nextPage": "Следующая страница",
+        "noBillToDisplay": "Нет счетов для отображения у этого пациента",
+        "noMatchingBillsToDisplay": "Нет подходящих счетов",
+        "noMatchingItemsToDisplay": "Нет подходящих позиций",
+        "noMatchingServicesToDisplay": "Нет подходящих услуг",
+        "noResultsFor": "Нет результатов для {{searchTerm}}",
+        "number": "Номер",
+        "ok": "ОК",
+        "paidBills": "Оплаченные счета",
+        "patientBill": "Счёт пациента",
+        "patientBillingAlert": "Уведомление о счёте пациента",
+        "patientBills": "Счета пациента",
+        "patientBillsDescription": "Список счетов пациента",
+        "patientCategory": "Категория пациента",
+        "paymentAmountCannotExceedAmountDue": "Сумма оплаты не может превышать сумму к оплате",
+        "paymentDetails": "Детали оплаты",
+        "paymentMethod": "Способ оплаты",
+        "paymentMethodRequired": "Способ оплаты обязателен для всех позиций",
+        "paymentMethods": "Способы оплаты",
+        "paymentMode": "Режим оплаты",
+        "paymentModeDeleted": "Способ оплаты успешно удалён.",
+        "paymentModeHistory": "История способа оплаты",
+        "paymentModeNameLabel": "Название способа оплаты",
+        "paymentModeNamePlaceholder": "Например, Наличные, Кредитная карта",
+        "paymentModeNameRequired": "Название способа оплаты обязательно",
+        "paymentModeNameToDelete": "Название способа оплаты: {{paymentModeName}}",
+        "paymentModeRequired": "Способ оплаты обязателен",
+        "paymentModeSaved": "Способ оплаты успешно сохранён.",
+        "paymentModesConfig": "Настройка способов оплаты",
+        "paymentOptionRequired": "Требуется хотя бы один вариант оплаты",
+        "paymentProcessedSuccessfully": "Платёж успешно обработан",
+        "payments": "Платежи",
+        "pendingBills": "Неоплаченные счета",
+        "policyNumber": "Номер полиса",
+        "postWaiver": "Выполнить списание",
+        "previousPage": "Предыдущая страница",
+        "price": "Цена",
+        "priceIsRequired": "Цена обязательна",
+        "priceMustBeNumber": "Цена должна быть числом",
+        "priceMustBePositive": "Цена должна быть больше 0",
+        "prices": "Цены",
+        "printBill": "Печать счёта",
+        "printReceipt": "Печать квитанции",
+        "processPayment": "Обработать платёж",
+        "quantity": "Количество",
+        "quantityCannotExceed100": "Количество не может превышать 100",
+        "quantityMustBeAtLeastOne": "Количество должно быть не менее 1",
+        "quantityMustBeInteger": "Количество должно быть целым числом",
+        "quantityMustBeNumber": "Количество должно быть числом",
+        "quantityRequired": "Количество обязательно",
+        "referenceNumber": "Референсный номер",
+        "remove": "Удалить",
+        "removePaymentMethod": "Удалить способ оплаты",
+        "saveAndClose": "Сохранить и закрыть",
+        "saveBill": "Сохранить счёт",
+        "saving": "Сохранение",
+        "searchConcepts": "Поиск связанного концепта",
+        "searching": "Поиск",
+        "searchItems": "Поиск позиций и услуг",
+        "searchThisTable": "Поиск по таблице",
+        "selectBillableService": "Выберите платную услугу",
+        "selectedItems": "Выбранные позиции",
+        "selectLocation": "Выберите местоположение",
+        "selectPatientCategory": "Выберите категорию пациента",
+        "selectPaymentMethod": "Выберите способ оплаты",
+        "selectPaymentMode": "Выберите режим оплаты",
+        "selectServiceType": "Выберите тип услуги",
+        "sellingPrice": "Продажная цена",
+        "serviceList": "Список услуг",
+        "serviceName": "Название услуги",
+        "serviceNameExceedsLimit": "Название услуги не может превышать {{MAX_NAME_LENGTH}} символов",
+        "serviceNameRequired": "Название услуги обязательно",
+        "servicesList": "Список услуг",
+        "serviceStatus": "Статус услуги",
+        "serviceType": "Тип услуги",
+        "serviceTypeRequired": "Тип услуги обязателен",
+        "shortName": "Краткое название",
+        "shortNameExceedsLimit": "Краткое название не может превышать {{MAX_NAME_LENGTH}} символов",
+        "status": "Статус услуги",
+        "submitting": "Отправка",
+        "success": "Успешно",
+        "total": "Итого",
+        "totalAmount": "Общая сумма",
+        "totalTendered": "Всего внесено",
+        "unitPrice": "Цена за единицу",
+        "unitPriceHelperText": "Это цена за единицу данной позиции",
+        "uuid": "UUID",
+        "uuidRequired": "UUID обязателен",
+        "validationError": "Ошибка валидации",
+        "visitTime": "Время визита",
+        "waiverForm": "Форма списания"
+      }
+    }
+  },
   "@openmrs/esm-styleguide": {
     "Brand color #1": "#005d5d"
   }
