--- a/distro/distro.properties
+++ b/distro/distro.properties
@@ -35,4 +35,4 @@ omod.bedmanagement=${bedmanagement.version}
 omod.stockmanagement=${stockmanagement.version}
 omod.billing=${billing.version}
 content.referenceapplication=${reference-content.version}
-content.referenceapplication-demo=1.7.0-SNAPSHOT
+content.referenceapplication-demo=${reference-demo-content.version}
