--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -37,5 +37,8 @@ COPY nginx.conf /etc/nginx/nginx.conf
 
 COPY --from=dev /app/spa /usr/share/nginx/html
 COPY config-core_demo.json /usr/share/nginx/html
+COPY src/main/resources/logo.png /usr/share/nginx/html
+COPY src/main/resources/login-logo.png /usr/share/nginx/html
+COPY src/main/resources/patient-chart-logo.png /usr/share/nginx/html
 
 CMD ["/usr/local/bin/startup.sh"]
